added tasks and node del module
- added critical tasks in order for project to function
- added node del module to clean up files before deploying

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "browser-sync": "^2.16.0",
+    "del": "^2.2.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cssmin": "^0.1.7",
